# recomendacao_musica

./: README.md  pyproject.toml
notebooks/: 1.0_recomendacao_musica-clusterizacao_genero.ipynb  2.0_recomendacao_musica-clusterizacao_musica.ipynb
