[tool.poetry]
name = "recomendacao_musica"
version = "0.1.0"
description = ""
authors = ["Laurivan <laurivansareta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
numpy = "^1.23.4"
seaborn = "^0.12.0"
plotly = "^5.10.0"
sklearn = "^0.0"
nbformat = "^5.7.0"
ipykernel = "^6.16.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
